--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rocket-auth-token"
 version = "0.1.0"
-authors = ["Samuelonoja <Samuelonoja970@gmail.com>"]
+authors = ["Samuelonoja <samiodev@icloud.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
